--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ margin:20px 0 28px;
 
 #header:after{
 content:"";
-display: block;   
-clear:both; 
+display: block;
+clear:both;
 visibility:hidden;
 }
 
@@ -238,7 +238,7 @@ overflow:hidden;
 }
 
 .tel strong{
-font-size:20px;
+#font-size:20px;
 font-weight:bold;
 }
 
@@ -358,12 +358,16 @@ border-bottom:2px solid #f0f0f0;
 }
 
 .post h3{
-margin:10px 0 30px;
+margin:10px 0 20px;
 padding-bottom:10px;
 font-size:110%;
 font-weight:normal;
 color:#777;
 border-bottom:2px solid #f0f0f0;
+}
+
+.post strong{
+font-size:120%;
 }
 
 .post blockquote{
@@ -372,12 +376,12 @@ padding:10px 0 10px 15px;
 margin:10px 0 25px 30px;
 border-left:5px solid #ccc;
 }
- 
+
 .post blockquote p{padding:5px 0;}
 
 .post table{
 border-collapse:collapse;
-margin:10px 0;
+margin:10px 0 30px;
 }
 
 .post table th,.post table td{
@@ -386,7 +390,7 @@ border:1px solid #ccc;
 }
 
 .post table th{
-text-align:right;
+text-align:left;
 font-weight:bold;
 letter-spacing:1px;
 white-space:nowrap;
@@ -598,7 +602,7 @@ nav#mainNav ul li:first-child a{border-top:1px dashed #e8e8e8;}
 nav#mainNav ul li:last-child a{border:0;}
 nav#mainNav ul li li:last-child a{border:0;}
 nav#mainNav ul li li:last-child a{border-bottom:1px dashed #e8e8e8;}
- 
+
 nav#mainNav ul li.current-menu-item a,nav#mainNav ul li a:hover,nav#mainNav ul li.current-menu-item a,nav#mainNav ul li a:active, nav#mainNav ul li li.current-menu-item a, nav#mainNav ul li.current-menu-item li a:hover, nav#mainNav ul li.current-menu-item li a:active{
 background:#eee;
 }
