--- a/style.css
+++ b/style.css
@@ -207,6 +207,10 @@ font-size:16px;
 border-bottom:2px solid #ccc;
 }
 
+h2.heading{
+font-size:18px;
+}
+  
 section.content img{
 max-width:90%;
 height:auto;
